--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ X-Python-Version: >=2.6
 
 Package: ice-setup
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}
+Depends: ${misc:Depends}, ${python:Depends}, python-pkg-resources
 Description: Setup script for Red Hat Ceph
  A standalone setup script to install and configure different services for Ceph
  like Calamari, ceph-deploy and package repositories.
